2000-06-06  Akim Demaille  <akim@epita.fr>

	* tests/aclocal.m4 (AC_ENV_SAVE): Skip `no_x'.
	From Mark Elbrecht.

2000-06-05  Mo DeJong  <mdejong@cygnus.com>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Move the setting
	of ac_tool_prefix before the call to AC_DIVERT_POP.

2000-06-05  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_TOOL_PREFIX): AU define it.
	Suggested by Mo DeJong.

2000-06-05  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_C_CHAR_UNSIGNED): Use the new compiler-test
	technology so that we can do the test via compilations only.  Also
	use (char) -1 instead of (char) 255 to check if char is unsigned.

2000-05-28  Jim Meyering  <meyering@lucent.com>

	* acspecific.m4 (AC_FUNC_STRERROR_R): Call strerror_r with 2nd arg
	of type char*, not int.  Suggestion from Paul Eggert.

	* doc/autoconf.texi (Particular Functions): Give better description of
	AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK.  From Paul Eggert.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Usual Tools): Document `ln -s'
	on DJGPP, based on the comments from Mark Elbrecht.

2000-05-26  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (autoconf, autoheader): Be more conscientious when
	looking for the executable.
	* autoupdate.sh: Likewise.
	* autoheader.sh: Likewise.
	Suggested by Alexandre Oliva.

2000-05-26  Akim Demaille  <akim@epita.fr>

	Thanks to --program-transform-name, `autoconf' might be install as
	`yo-man-i-am-the-all-mighty-AVt0c0nF-eh-eh'.  But when
	`yo-man-i-am-the-all-mighty-AVt0h3Ad3R-eh-eh' and the other tools
	want to trace, they might stupidly invoke the program named
	`autoconf' instead.  Pfff, stupid scripts :)

	* Makefile.am (editsh): Transfer the names of the install
	`autoconf' and `autoheader'.
	* autoconf.sh: Add a missing period at the end of the comment
	# Parse command line
	Make sure to have a ChangeLog much longer than the patch.
	* autoheader.sh: Use the right `autoconf'.
	* autoupdate.sh: Likewise.